--- a/templates/search/deposits.pug
+++ b/templates/search/deposits.pug
@@ -30,7 +30,7 @@
 {% load ngfilter %}
 {% load humanize %}
 
-a.btn.btn-primary(href="{% url 'deposits_new' %}") {% trans "New deposit" %}
+a.btn.btn-primary(href="{% url 'search:deposits_new' %}") {% trans "New deposit" %}
 
 .btn-group
   a.btn.btn-default(role="button"
