--- a/templates/search/history_entries.pug
+++ b/templates/search/history_entries.pug
@@ -23,17 +23,17 @@
 {% load i18n %}
 
 span
-  a(href="{% url 'history_entries_month' previous_month %}") &larr; {% trans "Previous" %}
+  a(href="{% url 'search:history_entries_month' previous_month %}") &larr; {% trans "Previous" %}
   span  &nbsp;
 if day.year < now.year or day.month < now.month
   span
-    a(href="{% url 'history_entries_month' next_month %}") {% trans "Next" %} &rarr;
+    a(href="{% url 'search:history_entries_month' next_month %}") {% trans "Next" %} &rarr;
 
 .row
   .col-lg-10
     ul.nav.nav-tabs
       li(role="presentation")
-        a(href="{% url 'history_sells_month' day|date:'Y-m'  %}") {% trans "Sells" %}
+        a(href="{% url 'search:history_sells_month' day|date:'Y-m'  %}") {% trans "Sells" %}
       li.active(role="presentation"): a(href="#") {% trans "Entries" %}
 
 h1 {{ day | date:'F o' | title }}
@@ -53,7 +53,7 @@ h1 {{ day | date:'F o' | title }}
           else
             span {{ it.date_obj | date:'l' }} 
         td
-          a(href="{% url 'history_entries_day' it.date %}") {{ it.date }}
+          a(href="{% url 'search:history_entries_day' it.date %}") {{ it.date }}
         td.text-right {{ it.price_entered }} {% trans "€" %}
         td.text-right x {{ it.nb_entered }}
 
