--- a/templates/search/deposits_view.pug
+++ b/templates/search/deposits_view.pug
@@ -117,19 +117,19 @@
 .row
   .col-sm-8
     .btn-group
-      a.btn.btn-default(href='{% url "deposit_checkout" deposit.id %}', title='{% trans "Save this deposit state" as deposit_state %}') {% trans "Deposit state" %}
+      a.btn.btn-default(href="{% url 'search:deposit_checkout' deposit.id %}", title='{% trans "Save this deposit state" as deposit_state %}') {% trans "Deposit state" %}
 
       a.btn.btn-default(role="button", href="/admin/search/deposit/{{deposit.id}}") {% trans "Edit" %}
 
       {% trans "Add copies…" as deposit_add %}
-      a.btn.btn-default(href='{% url "deposit_add_copies" deposit.id %}', title="{{ deposit_add }}", value="{{ deposit_add }}", type="submit") {{ deposit_add }}
+      a.btn.btn-default(href="{% url 'search:deposit_add_copies' deposit.id %}", title="{{ deposit_add }}", value="{{ deposit_add }}", type="submit") {{ deposit_add }}
 
       a(href="http://abelujo.cc/docs/deposits/", target="_blank"): button.btn.btn-default(title='{% trans "Read the documentation" %}')
        i.glyphicon.glyphicon-question-sign
 
 
 //- {% trans "Delete this deposit" as deposit_delete %}
-//- a(href="{% url 'deposit_delete' deposit.id %}").btn.btn-danger(title="{{ deposit_delete }}", value="{{ deposit_delete }}", type="submit", on-click="alert('not implemented!');") {{ deposit_delete }}
+//- a(href="{% url 'search:deposit_delete' deposit.id %}").btn.btn-danger(title="{{ deposit_delete }}", value="{{ deposit_delete }}", type="submit", on-click="alert('not implemented!');") {{ deposit_delete }}
 
 table.table.table-striped.table-hover
     tr
