--- a/templates/search/index.pug
+++ b/templates/search/index.pug
@@ -24,14 +24,14 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-form(action="{% url 'card_search' %}")
+form(action="{% url 'search:card_search' %}")
   {% csrf_token %}
   {% bootstrap_form searchForm %}
   // {{ form.as_p }}
   span
     input.btn.btn-primary(type='submit', value='{% trans "Search" %}')
     span  {% trans "or" %}: 
-    a(href="{% url 'card_edit' %}") {% trans "Add a card manually" %}
+    a(href="{% url 'search:card_edit' %}") {% trans "Add a card manually" %}
 
 div.col-md-10
   {% block search_result %}
