--- a/templates/base.jade
+++ b/templates/base.jade
@@ -101,7 +101,7 @@ html(ng-app="abelujo")
             a(href='{% url "card_collection" %}') {% trans "My stock" %}
 
           li(ng-class="{active: url == 'search' }")
-            a(href='{% url "card_search" %}') {% trans "New entry" %}
+            a(href='{% url "card_search" %}') {% trans "Search" %}
 
           li(ng-class="{active: url == 'sell' }")
             a(href='{% url "card_sell" %}') {% trans "Sell" %}
