--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -120,7 +120,7 @@ div.ng-cloak(ng-controller="sellController")
 
 
       .row(ng-show="cards_selected.length > 0")
-          h3.col-md-5 {{ 'getTotalCopies() ' | ng }} {% trans "titles selected. Total:" %} {{ 'total_price ' | ng }} €
+          h3.col-md-5 {{ 'getTotalCopies() ' | ng }} {% trans "titles selected. Total:" %} {{ 'total_price ' | ng }} {{ 'cards_selected[0].currency' | ng }}
           .col-md-2
           .col-md-1
             select(
@@ -151,7 +151,7 @@ div.ng-cloak(ng-controller="sellController")
                   ng-model="{% verbatim %} card.price_sold {% endverbatim %}"
                   ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
                 )
-                span.input-group-addon €
+                span.input-group-addon {{ 'card.currency' | ng }}
 
         .col-md-1
             select(
