--- a/templates/search/card_history.jade
+++ b/templates/search/card_history.jade
@@ -46,7 +46,7 @@ div {% trans "Total sells" %}: {{ sells_data.total_sells }}
       em {% trans "This card has no registered sells." %}
 
     for sell in sells_data.data
-      div {{ sell.created }} - {{ sell.price_sold }} {{ sell.card.get_currency }}
+      div {{ sell.created }} - {{ sell.price_sold_fmt }}
         if sell.quantity != 1
           span &nbsp x {{ sell.quantity }}
 
