--- a/search/static/search/style.css
+++ b/search/static/search/style.css
@@ -99,12 +99,12 @@ a.my-black-link {
   for the element that has the .my-animated-item
   class
 */
-.my-animated-item.ng-enter, .my-animated-item.ng-move {
+.my-animated-item, .my-animated-item {
   -webkit-transition:0.5s linear all;
   -moz-transition:0.5s linear all;
   -o-transition:0.5s linear all;
   transition:0.5s linear all;
-  opacity:0;
+  /* opacity:0; */
 }
 
 /*
