--- a/templates/search/inventory_view_component.jade
+++ b/templates/search/inventory_view_component.jade
@@ -123,7 +123,7 @@ div(ng-controller=controller)
           th
 
     tbody
-        tr.repeated-item(ng-show="cards_to_show", ng-repeat="card in cards_to_show")
+        tr.my-animated-item.repeated-item(ng-show="cards_to_show", ng-repeat="card in cards_to_show")
 
          td.col-md-5
           a(href="{{ 'card.url ' | ng }}") {{ 'card.title' | ng }}
