Card show: update price from Dilicom, show current availability

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -64,6 +64,10 @@ div#abelujo
             tr
               td {% trans "isbn" %}
               td {{ object.isbn }}
+            if object.availability
+              tr
+                td Disponibilité
+                td {{ object.availability_fmt }}
             tr
               td
                 | {# Translators: format like pocket or big (livre de poche) #}
