--- a/templates/search/history_sells.jade
+++ b/templates/search/history_sells.jade
@@ -49,7 +49,7 @@ h1 {{ day | date:'F o' | title }}
 
 .col-md-4
   table.table.table-striped
-    for it in sells_data.data
+      {% for it in sells_data.data reversed %}
       tr
         td
           if it.weekday == 6
@@ -59,5 +59,6 @@ h1 {{ day | date:'F o' | title }}
         td
           a(href="{% url 'history_sells_day' it.date %}") {{ it.date }}
         td.text-right {{ it.total_price_sold }} {% trans "€" %}
+      {% endfor %}
 
 {% endblock content %}
