(minor) pdf footer advertising in french
[ci skip]

--- a/templates/pdftemplates/pdf-barcode.jade
+++ b/templates/pdftemplates/pdf-barcode.jade
@@ -28,7 +28,7 @@ head
         }
 
         @bottom-center {
-          content: "Abelujo http://abelujo.cc/ - free software for bookshops"
+          content: "Abelujo http://abelujo.cc/ - logiciel libre pour librairies et éditeurs"
         }
     }
 
