Bill for a sell: WIP

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -63,6 +63,9 @@ html(ng-app="abelujo")
                     a(href='/{{ LANGUAGE_CODE }}/databasesearch/publisher') {% trans "Publishers" %}
                 li.divider(role="separator")
                 li(href="#")
+                    a(href='/{{ LANGUAGE_CODE }}/databasesearch/client') {% trans "Clients" %}
+                li.divider(role="separator")
+                li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/database') {% trans "All" %}
 
         form.navbar-form.navbar-left
